<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:text="@string/dens20c" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:text="@string/dens" />

                <EditText
                    android:id="@+id/editDensStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="autofillHints"
                    android:ems="3"
                    android:hint="@string/hintStartDens"
                    android:inputType="number"
                    android:text="@string/densStart"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="@string/kgm3" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24sp"
                    android:layout_marginTop="-8sp"
                    android:text="@string/uDens" />

                <TextView
                    android:id="@+id/textuWeightStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="0.883"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="H/м³" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editKGStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:autofillHints=""
                    android:ems="3"
                    android:inputType="number"
                    android:labelFor="@id/textView4"
                    android:text="@string/kgStart"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="кг" />

                <EditText
                    android:id="@+id/editLStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:autofillHints="autofillHints"
                    android:ems="5"
                    android:inputType="number"
                    android:text="11083.9"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="литров" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:orientation="horizontal" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:orientation="vertical">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8sp"
                    android:layout_marginTop="12sp"

                    android:text="Температура при замере " />

                <EditText
                    android:id="@+id/editDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:autofillHints=""
                    android:ems="2"
                    android:inputType="number"
                    android:text="30"
                    android:textAlignment="textEnd" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12sp"
                    android:layout_marginEnd="8sp"
                    android:text="°С" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editKGCalc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:ems="3"
                    android:inputType="number"
                    android:text="@string/kgStart"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="кг" />

                <TextView
                    android:id="@+id/textLCalc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:text="11184.4"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="литров" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:text="@string/dens" />

                <TextView
                    android:id="@+id/textDensCalc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:text="@string/densStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="@string/kgm3" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginTop="-8sp"
                    android:text="@string/uDens" />

                <TextView
                    android:id="@+id/textuWeightCalc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="0.883"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="H/м³" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>